tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__struct_ret_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/struct-ret-1.c" (c, x86_64-unknown-linux-gnu)
global f.xr : rec_X = {"return val", 82} [internal, default, align 1, dso_local]
global c1 : s8i = 97 [external, default, align 1, dso_local]
global c2 : s8i = 127 [external, default, align 1, dso_local]
global c3 : s8i = -128 [external, default, align 1, dso_local]
global c4 : s8i = -1 [external, default, align 1, dso_local]
global c5 : s8i = -1 [external, default, align 1, dso_local]
global d1 : double = 1.000000e-01 [external, default, align 8, dso_local]
global d2 : double = 2.000000e-01 [external, default, align 8, dso_local]
global d3 : double = 3.000000e-01 [external, default, align 8, dso_local]
global d4 : double = 4.000000e-01 [external, default, align 8, dso_local]
global d5 : double = 5.000000e-01 [external, default, align 8, dso_local]
global d6 : double = 6.000000e-01 [external, default, align 8, dso_local]
global d7 : double = 0.69999999999999996 [external, default, align 8, dso_local]
global d8 : double = 8.000000e-01 [external, default, align 8, dso_local]
global d9 : double = 9.000000e-01 [external, default, align 8, dso_local]
global B1 : rec_B = {1.000000e-01, [1, 2, 3]} [external, default, align 8, dso_local]
global B2 : rec_B = {2.000000e-01, [5, 4, 3]} [external, default, align 8, dso_local]
global X1 : rec_X = {"abcdefghijklmnopqrstuvwxyzABCDEF", 71} [external, default, align 1, dso_local]
global X2 : rec_X = {"123", 57} [external, default, align 1, dso_local]
global X3 : rec_X = {"return-return-return", 82} [external, default, align 1, dso_local]
global out : s8i[100] = zero [external, default, align 16, dso_local]
global .str : s8i[63] = "X f(B,char,double,B):({%g,{%d,%d,%d}},'%c',%g,{%g,{%d,%d,%d}})" [cir_private, default, align 1, dso_local, constant]
global fp : ((rec_B, s8i, double, rec_B) -> rec_X)* = @f [external, default, align 8, dso_local]

fn sprintf(%arg0: s8i*, %arg1: s8i*, ...) -> s32i [external, c, nothrow];
fn f(%arg0: rec_X*, %arg1: rec_B*, %arg2: s8i, %arg3: double, %arg4: rec_B*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_X*, %arg1: rec_B*, %arg2: s8i, %arg3: double, %arg4: rec_B*):
        %47 = load %arg4 : rec_B
        %48 = load %arg1 : rec_B
        %49 = alloca rec_B, "a", align 8
        %50 = alloca s8i, "b", align 1
        %51 = alloca double, "c", align 8
        %52 = alloca rec_B, "d", align 8
        store %48, %49
        store %arg2, %50
        store %arg3, %51
        store %47, %52
        %53 = get_global @f.xr : rec_X*
        copy %arg0, %53
        %54 = load %50 : s8i, align 1
        %55 = get_member %arg0[1] "c1" : s8i*
        store %54, %55, align 1
        %56 = get_global @sprintf : ((s8i*, s8i*, ...) -> s32i)*
        %57 = get_global @out : s8i[100]*
        %58 = cast(array_to_ptrdecay) %57 : s8i*
        %59 = get_global @.str : s8i[63]*
        %60 = cast(array_to_ptrdecay) %59 : s8i*
        %61 = get_member %49[0] "d" : double*
        %62 = load %61 : double, align 8
        %63 = const 0 : s64i
        %64 = get_member %49[1] "i" : s32i[3]*
        %65 = get_element %64[%63] : s32i*
        %66 = load %65 : s32i, align 8
        %67 = const 1 : s64i
        %68 = get_member %49[1] "i" : s32i[3]*
        %69 = get_element %68[%67] : s32i*
        %70 = load %69 : s32i, align 4
        %71 = const 2 : s64i
        %72 = get_member %49[1] "i" : s32i[3]*
        %73 = get_element %72[%71] : s32i*
        %74 = load %73 : s32i, align 8
        %75 = load %50 : s8i, align 1
        %76 = cast(integral) %75 : s32i
        %77 = load %51 : double, align 8
        %78 = get_member %52[0] "d" : double*
        %79 = load %78 : double, align 8
        %80 = const 0 : s64i
        %81 = get_member %52[1] "i" : s32i[3]*
        %82 = get_element %81[%80] : s32i*
        %83 = load %82 : s32i, align 8
        %84 = const 1 : s64i
        %85 = get_member %52[1] "i" : s32i[3]*
        %86 = get_element %85[%84] : s32i*
        %87 = load %86 : s32i, align 4
        %88 = const 2 : s64i
        %89 = get_member %52[1] "i" : s32i[3]*
        %90 = get_element %89[%88] : s32i*
        %91 = load %90 : s32i, align 8
        %92 = call @sprintf(%58, %60, %62, %66, %70, %74, %76, %77, %79, %83, %87, %91) : s32i [all]
        return
}
fn strcpy(%arg0: s8i*, %arg1: s8i*) -> s8i* [external, c, nothrow];
fn strcmp(%arg0: s8i*, %arg1: s8i*) -> s32i [external, c, pure, nothrow];
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_X, "Xr", align 1
    %2 = alloca s8i[100], "tmp", align 16
    %3 = const 0 : s32i
    store %3, %0
    %4 = get_global @B1 : rec_B*
    %5 = get_global @c2 : s8i*
    %6 = load %5 : s8i, align 1
    %7 = get_global @d3 : double*
    %8 = load %7 : double, align 8
    %9 = get_global @B2 : rec_B*
    %10 = load %4 : rec_B, align 8
    %11 = load %9 : rec_B, align 8
    %12 = alloca rec_B, "byval", align 8
    store %10, %12
    %13 = alloca rec_B, "byval", align 8
    store %11, %13
    call @f(%1, %12, %6, %8, %13) [all]
    %14 = get_global @strcpy : ((s8i*, s8i*) -> s8i*)*
    %15 = cast(array_to_ptrdecay) %2 : s8i*
    %16 = get_global @out : s8i[100]*
    %17 = cast(array_to_ptrdecay) %16 : s8i*
    %18 = call @strcpy(%15, %17) : s8i* [all]
    %19 = const 0 : s8i
    %20 = get_member %1[1] "c1" : s8i*
    store %19, %20, align 1
    %21 = const 0 : s64i
    %22 = get_member %1[0] "c" : s8i[33]*
    %23 = get_element %22[%21] : s8i*
    store %19, %23, align 1
    %24 = get_global @fp : ((rec_B, s8i, double, rec_B) -> rec_X)**
    %25 = load %24 : ((rec_B, s8i, double, rec_B) -> rec_X)*, align 8
    %26 = get_global @B1 : rec_B*
    %27 = get_global @c2 : s8i*
    %28 = load %27 : s8i, align 1
    %29 = get_global @d3 : double*
    %30 = load %29 : double, align 8
    %31 = get_global @B2 : rec_B*
    %32 = load %26 : rec_B, align 8
    %33 = load %31 : rec_B, align 8
    %34 = alloca rec_B, "byval", align 8
    store %32, %34
    %35 = alloca rec_B, "byval", align 8
    store %33, %35
    %36 = cast(bitcast) %25 : ((rec_X*, rec_B*, s8i, double, rec_B*) -> void)*
    call %36(%1, %34, %28, %30, %35) [all]
    scope {
        %40 = get_global @strcmp : ((s8i*, s8i*) -> s32i)*
        %41 = cast(array_to_ptrdecay) %2 : s8i*
        %42 = get_global @out : s8i[100]*
        %43 = cast(array_to_ptrdecay) %42 : s8i*
        %44 = call @strcmp(%41, %43) : s32i [pure]
        %45 = cast(int_to_bool) %44 : bool
        if %45 {
            %46 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %37 = get_global @exit : ((s32i) -> void)*
    %38 = const 0 : s32i
    call @exit(%38) [all]
    %39 = load %0 : s32i
    return %39
}
