tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__switch_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/switch-1.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg0: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %46 = alloca s32i, "x", align 4
        %47 = alloca s32i, "__retval", align 4
        store %arg0, %46
        scope {
            %50 = load %46 : s32i, align 4
            switch %50 {
                case equal 4 {
                    yield
                }
                case equal 6 {
                    yield
                }
                case equal 9 {
                    yield
                }
                case equal 11 {
                    %51 = const 30 : s32i
                    store %51, %47
                    %52 = load %47 : s32i
                    return %52
                }
            }
            yield
        }
        %48 = const 31 : s32i
        store %48, %47
        %49 = load %47 : s32i
        return %49
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "i", align 4
    %2 = alloca s32i, "r", align 4
    %3 = const 0 : s32i
    store %3, %0
    scope {
        %6 = const -1 : s32i
        store %6, %1, align 4
        for cond: {
            %43 = load %1 : s32i, align 4
            %44 = const 66 : s32i
            %45 = cmp lt %43, %44 : bool
            condition %45
        } step: {
            %7 = load %1 : s32i, align 4
            %8 = inc %7 : s32i [nsw]
            store %8, %1, align 4
            yield
        } do {
            scope {
                %9 = load %1 : s32i, align 4
                %10 = call @foo(%9) : s32i [all]
                store %10, %2, align 4
                scope {
                    %11 = load %1 : s32i, align 4
                    %12 = const 4 : s32i
                    %13 = cmp eq %11, %12 : bool
                    if %13 {
                        scope {
                            %39 = load %2 : s32i, align 4
                            %40 = const 30 : s32i
                            %41 = cmp ne %39, %40 : bool
                            if %41 {
                                %42 = get_global @abort : (() -> void)*
                                call @abort() [all]
                                yield
                            }
                            yield
                        }
                        yield
                    } else {
                        scope {
                            %14 = load %1 : s32i, align 4
                            %15 = const 6 : s32i
                            %16 = cmp eq %14, %15 : bool
                            if %16 {
                                scope {
                                    %35 = load %2 : s32i, align 4
                                    %36 = const 30 : s32i
                                    %37 = cmp ne %35, %36 : bool
                                    if %37 {
                                        %38 = get_global @abort : (() -> void)*
                                        call @abort() [all]
                                        yield
                                    }
                                    yield
                                }
                                yield
                            } else {
                                scope {
                                    %17 = load %1 : s32i, align 4
                                    %18 = const 9 : s32i
                                    %19 = cmp eq %17, %18 : bool
                                    if %19 {
                                        scope {
                                            %31 = load %2 : s32i, align 4
                                            %32 = const 30 : s32i
                                            %33 = cmp ne %31, %32 : bool
                                            if %33 {
                                                %34 = get_global @abort : (() -> void)*
                                                call @abort() [all]
                                                yield
                                            }
                                            yield
                                        }
                                        yield
                                    } else {
                                        scope {
                                            %20 = load %1 : s32i, align 4
                                            %21 = const 11 : s32i
                                            %22 = cmp eq %20, %21 : bool
                                            if %22 {
                                                scope {
                                                    %27 = load %2 : s32i, align 4
                                                    %28 = const 30 : s32i
                                                    %29 = cmp ne %27, %28 : bool
                                                    if %29 {
                                                        %30 = get_global @abort : (() -> void)*
                                                        call @abort() [all]
                                                        yield
                                                    }
                                                    yield
                                                }
                                                yield
                                            } else {
                                                scope {
                                                    %23 = load %2 : s32i, align 4
                                                    %24 = const 31 : s32i
                                                    %25 = cmp ne %23, %24 : bool
                                                    if %25 {
                                                        %26 = get_global @abort : (() -> void)*
                                                        call @abort() [all]
                                                        yield
                                                    }
                                                    yield
                                                }
                                                yield
                                            }
                                            yield
                                        }
                                        yield
                                    }
                                    yield
                                }
                                yield
                            }
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    %4 = const 0 : s32i
    store %4, %0
    %5 = load %0 : s32i
    return %5
}
