tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__va_arg_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/va-arg-1.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn f(%arg0: u64i, %arg1: u64i, %arg2: u64i, %arg3: u64i, %arg4: u64i, %arg5: u64i, %arg6: u64i, %arg7: u64i, %arg8: u64i, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u64i, %arg1: u64i, %arg2: u64i, %arg3: u64i, %arg4: u64i, %arg5: u64i, %arg6: u64i, %arg7: u64i, %arg8: u64i):
        %17 = alloca u64i, "p0", align 8
        %18 = alloca u64i, "p1", align 8
        %19 = alloca u64i, "p2", align 8
        %20 = alloca u64i, "p3", align 8
        %21 = alloca u64i, "p4", align 8
        %22 = alloca u64i, "p5", align 8
        %23 = alloca u64i, "p6", align 8
        %24 = alloca u64i, "p7", align 8
        %25 = alloca u64i, "p8", align 8
        %26 = alloca rec___va_list_tag[1], "select", align 16
        store %arg0, %17
        store %arg1, %18
        store %arg2, %19
        store %arg3, %20
        store %arg4, %21
        store %arg5, %22
        store %arg6, %23
        store %arg7, %24
        store %arg8, %25
        %27 = cast(array_to_ptrdecay) %26 : rec___va_list_tag*
        va_start %27
        scope {
            %39 = cast(array_to_ptrdecay) %26 : rec___va_list_tag*
            %40 = va_arg %39 : u64i
            %41 = const 10 : u64i
            %42 = cmp ne %40, %41 : bool
            if %42 {
                %43 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %34 = cast(array_to_ptrdecay) %26 : rec___va_list_tag*
            %35 = va_arg %34 : u64i
            %36 = const 11 : u64i
            %37 = cmp ne %35, %36 : bool
            if %37 {
                %38 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %29 = cast(array_to_ptrdecay) %26 : rec___va_list_tag*
            %30 = va_arg %29 : u64i
            %31 = const 0 : u64i
            %32 = cmp ne %30, %31 : bool
            if %32 {
                %33 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %28 = cast(array_to_ptrdecay) %26 : rec___va_list_tag*
        va_end %28
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 1 : u64i
    %3 = const 2 : u64i
    %4 = const 3 : u64i
    %5 = const 4 : u64i
    %6 = const 5 : u64i
    %7 = const 6 : u64i
    %8 = const 7 : u64i
    %9 = const 8 : u64i
    %10 = const 9 : u64i
    %11 = const 10 : s64i
    %12 = const 11 : s64i
    %13 = const 0 : s64i
    call @f(%2, %3, %4, %5, %6, %7, %8, %9, %10, %11, %12, %13) [all]
    %14 = get_global @exit : ((s32i) -> void)*
    %15 = const 0 : s32i
    call @exit(%15) [all]
    %16 = load %0 : s32i
    return %16
}
