tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__va_arg_12.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/va-arg-12.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn f(%arg0: double, %arg1: double, %arg2: double, %arg3: double, %arg4: double, %arg5: double, %arg6: double, %arg7: double, %arg8: double, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: double, %arg1: double, %arg2: double, %arg3: double, %arg4: double, %arg5: double, %arg6: double, %arg7: double, %arg8: double):
        %17 = alloca double, "p0", align 8
        %18 = alloca double, "p1", align 8
        %19 = alloca double, "p2", align 8
        %20 = alloca double, "p3", align 8
        %21 = alloca double, "p4", align 8
        %22 = alloca double, "p5", align 8
        %23 = alloca double, "p6", align 8
        %24 = alloca double, "p7", align 8
        %25 = alloca double, "p8", align 8
        %26 = alloca rec___va_list_tag[1], "select", align 16
        store %arg0, %17
        store %arg1, %18
        store %arg2, %19
        store %arg3, %20
        store %arg4, %21
        store %arg5, %22
        store %arg6, %23
        store %arg7, %24
        store %arg8, %25
        %27 = cast(array_to_ptrdecay) %26 : rec___va_list_tag*
        <unmodeled: cir.va_start>
        scope {
            %39 = cast(array_to_ptrdecay) %26 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %41 = const 1.000000e+01 : double
            %42 = cmp ne %40, %41 : bool
            if %42 {
                %43 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %34 = cast(array_to_ptrdecay) %26 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %36 = const 1.100000e+01 : double
            %37 = cmp ne %35, %36 : bool
            if %37 {
                %38 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %29 = cast(array_to_ptrdecay) %26 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %31 = const 0.000000e+00 : double
            %32 = cmp ne %30, %31 : bool
            if %32 {
                %33 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %28 = cast(array_to_ptrdecay) %26 : rec___va_list_tag*
        <unmodeled: cir.va_end>
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 1.000000e+00 : double
    %3 = const 2.000000e+00 : double
    %4 = const 3.000000e+00 : double
    %5 = const 4.000000e+00 : double
    %6 = const 5.000000e+00 : double
    %7 = const 6.000000e+00 : double
    %8 = const 7.000000e+00 : double
    %9 = const 8.000000e+00 : double
    %10 = const 9.000000e+00 : double
    %11 = const 1.000000e+01 : double
    %12 = const 1.100000e+01 : double
    %13 = const 0.000000e+00 : double
    call @f(%2, %3, %4, %5, %6, %7, %8, %9, %10, %11, %12, %13) [all]
    %14 = get_global @exit : ((s32i) -> void)*
    %15 = const 0 : s32i
    call @exit(%15) [all]
    %16 = load %0 : s32i
    return %16
}
